Update of readme and trying to get swagger to work
