# src/server.ts
@@ -3,6 +3,7 @@ import express, { type Request, type Response } from "express";
 import cors from "cors";
 import authRoutes from "./routes/authRoutes";
 import backlogRoutes from "./routes/backlogRoutes";
+import healthRoutes from "./routes/healthRoutes";
 import { authenticate } from "./middleware/auth";
 import swaggerUi from "swagger-ui-express";
 import swaggerDocument from "./swagger-output.json";
@@ -18,14 +19,12 @@ if (!secrets) {
   );
 }
 
-app.use(cors({ origin: process.env.CORS_ORIGIN, credentials: true }));
+app.use(cors({ origin: `localhost:${PORT}`, credentials: true }));
 app.use(express.json({ limit: "16kb" }));
 app.use(express.urlencoded({ extended: true, limit: "16kb" }));
 app.use(express.static("public"));
 
-app.get("/v1/health", (req: Request, res: Response) => {
-  res.status(200).json({ status: "ok", timestamp: new Date().toISOString() });
-});
+app.get("/v1/health", healthRoutes);
 
 app.use("/v1/auth", authRoutes);
 app.use("/v1/entries", backlogRoutes);
@@ -37,12 +36,7 @@ app.get("/v1/protected", authenticate, (req: Request, res: Response) => {
 app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 app.listen(PORT, () => {
-  console.log(`Server running on http://localhost:${PORT}`);
+  console.log(`Server running on http://localhost:${PORT}/api-docs`);
 });
 
 export default app;
-
-/*
-GET v1/entries/:id -> Fetch the specific entry
-DELETE v1/entries/:id -> Delete entry
-*/
